[package]
name = "portion"
version = "0.1.0"
authors = ["Lotrotk <lotrotk@gmail.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
description = "Dedicated wrappers for floating point numbers representing a portion of some numerical entity."
repository = "https://github.com/Lotrotk/portion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
